minor re-factoring